# nori

./: .bazelrc  .gitignore  .ycm_extra_conf.py  BUILD  CMakeLists.txt  CPPLINT.cfg  README.md  WORKSPACE
ai/life_game/: CMakeLists.txt  life_game.cc  life_game.h  life_main.cc
ai/nrai/: BUILD.gn  CMakeLists.txt  core.cc  core.h  handle.h  logic.cc  logic.h  main.cc  problem.h  pybind11_module.cc  sense.cc  sense.h
ai/test/: CMakeLists.txt  balance_unittest.cc  test_nrai.py
base/: CMakeLists.txt
base/algorithm/hmm/: gmm.cpp  gmm.h  hmm.cpp  hmm.h  kmeans.cpp  kmeans.h
base/algorithm/test/: CMakeLists.txt  gmm_test.cpp  hmm_test.cpp  kmeans_test.cpp
net/: CMakeLists.txt
net/brpc/: acceptor.cpp  acceptor.h  adaptive_connection_type.cpp  adaptive_connection_type.h  adaptive_max_concurrency.cpp  adaptive_max_concurrency.h  adaptive_protocol_type.h  amf.cpp  amf.h  amf_inl.h  authenticator.h  callback.h  channel.cpp  channel.h  channel_base.h  circuit_breaker.cpp  circuit_breaker.h  closure_guard.h  cluster_recover_policy.cpp  cluster_recover_policy.h  compress.cpp  compress.h  concurrency_limiter.h  controller.cpp  controller.h  data_factory.h  describable.h  destroyable.h  esp_head.h  esp_message.cpp  esp_message.h  event_dispatcher.cpp  event_dispatcher.h  excluded_servers.h  extension.h  extension_inl.h  global.cpp  grpc.cpp  grpc.h  health_reporter.h  (+96 more)
net/brpc/builtin/: common.cpp  (+51 more)
net/bthread/: bthread.cpp  bthread.h  butex.cpp  butex.h  comlog_initializer.h  condition_variable.cpp  condition_variable.h  context.cpp  context.h  countdown_event.cpp  countdown_event.h  errno.cpp  errno.h  execution_queue.cpp  execution_queue.h  execution_queue_inl.h  fd.cpp  id.cpp  id.h  interrupt_pthread.cpp  key.cpp  list_of_abafree_id.h  mutex.cpp  mutex.h  parking_lot.h  processor.h  remote_task_queue.h  stack.cpp  stack.h  stack_inl.h  sys_futex.cpp  sys_futex.h  task_control.cpp  task_control.h  task_group.cpp  task_group.h  task_group_inl.h  task_meta.h  timer_thread.cpp  timer_thread.h  (+3 more)
net/butil/: arena.cpp  arena.h  at_exit.cc  at_exit.h  atomic_ref_count.h  atomic_sequence_num.h  atomicops.h  atomicops_internals_arm64_gcc.h  atomicops_internals_arm_gcc.h  atomicops_internals_atomicword_compat.h  atomicops_internals_gcc.h  atomicops_internals_mac.h  atomicops_internals_mips_gcc.h  atomicops_internals_tsan.h  atomicops_internals_x86_gcc.cc  atomicops_internals_x86_gcc.h  atomicops_internals_x86_msvc.h  auto_reset.h  base64.cc  base_paths.cc  big_endian.cc  big_endian.h  binary_printer.cpp  binary_printer.h  bit_array.h  bits.h  build_config.h  cancelable_callback.h  class_name.cpp  class_name.h  comlog_sink.cc  comlog_sink.h  compat.h  compiler_specific.h  config.h  cpu.cc  cpu.h  crc32c.cc  endpoint.cpp  endpoint.h  (+75 more)
net/bvar/: collector.cpp  collector.h  default_variables.cpp  gflag.cpp  gflag.h  latency_recorder.cpp  latency_recorder.h  passive_status.h  recorder.h  reducer.h  scoped_timer.h  status.h  variable.cpp  variable.h  vector.h  window.h
net/example/: BUILD  CMakeLists.txt
net/json2pb/: encode_decode.cpp  json_to_pb.cpp  json_to_pb.h  pb_to_json.cpp  pb_to_json.h  protobuf_map.cpp  protobuf_map.h  zero_copy_stream_reader.h  zero_copy_stream_writer.h
net/mcpack2pb/: CMakeLists.txt  field_type.cpp  field_type.h  generator.cpp  mcpack2pb.cpp  mcpack2pb.h  parser-inl.h  parser.cpp  parser.h  serializer-inl.h  serializer.cpp  serializer.h
net/test/: BUILD  CMakeLists.txt  aligned_memory_unittest.cc  allocator_unittest.cc  at_exit_unittest.cc  atomicops_unittest.cc  baidu_thread_local_unittest.cpp  baidu_time_unittest.cpp  bits_unittest.cc  bounded_queue_unittest.cc  brpc_adaptive_class_unittest.cpp  brpc_builtin_service_unittest.cpp  brpc_channel_unittest.cpp  brpc_circuit_breaker_unittest.cpp  brpc_controller_unittest.cpp  brpc_esp_protocol_unittest.cpp  brpc_event_dispatcher_unittest.cpp  brpc_extension_unittest.cpp  brpc_grpc_protocol_unittest.cpp  brpc_h2_unsent_message_unittest.cpp  brpc_hpack_unittest.cpp  brpc_http_message_unittest.cpp  brpc_http_parser_unittest.cpp  brpc_http_rpc_protocol_unittest.cpp  brpc_http_status_code_unittest.cpp  brpc_hulu_pbrpc_protocol_unittest.cpp  brpc_input_messenger_unittest.cpp  brpc_load_balancer_unittest.cpp  brpc_memcache_unittest.cpp  brpc_mongo_protocol_unittest.cpp  brpc_naming_service_filter_unittest.cpp  brpc_naming_service_unittest.cpp  brpc_nova_pbrpc_protocol_unittest.cpp  brpc_prometheus_metrics_unittest.cpp  brpc_proto_unittest.cpp  brpc_protobuf_json_unittest.cpp  brpc_public_pbrpc_protocol_unittest.cpp  brpc_redis_unittest.cpp  brpc_repeated_field_unittest.cpp  brpc_rtmp_unittest.cpp  (+130 more)
net/tools/: CMakeLists.txt  print_gcc_version.cc
raft/: CMakeLists.txt
raft/braft/: CMakeLists.txt  ballot.cpp  ballot.h  ballot_box.cpp  ballot_box.h  builtin_service_impl.cpp  builtin_service_impl.h  cli.cpp  cli.h  cli_service.cpp  cli_service.h  closure_helper.h  closure_queue.cpp  closure_queue.h  configuration.cpp  configuration.h  configuration_manager.cpp  configuration_manager.h  file_reader.cpp  file_reader.h  file_service.cpp  file_service.h  file_system_adaptor.cpp  file_system_adaptor.h  fsm_caller.cpp  fsm_caller.h  fsync.cpp  fsync.h  lease.cpp  lease.h  log.cpp  log.h  log_entry.cpp  log_entry.h  log_manager.cpp  log_manager.h  macros.h  memory_log.cpp  memory_log.h  node.cpp  (+29 more)
raft/example/: CMakeLists.txt
raft/test/: CMakeLists.txt  memory_file_system_adaptor.h  test_ballot.cpp  test_ballot_box.cpp  test_checksum.cpp  test_cli.cpp  test_configuration.cpp  test_file_service.cpp  test_file_system_adaptor.cpp  test_fsm_caller.cpp  test_fsync.cpp  test_leader_lease.cpp  test_log.cpp  test_log_entry.cpp  test_log_manager.cpp  test_memory_storage.cpp  test_meta.cpp  test_node.cpp  test_protobuf_file.cpp  test_repeated_timer_task.cpp  test_snapshot.cpp  test_snapshot_executor.cpp  test_storage.cpp  test_throttle.cpp  test_util.cpp  util.h
raft/tools/: CMakeLists.txt  braft_cli.cpp
storage/: CMakeLists.txt
storage/noah/: CMakeLists.txt
test/: CMakeLists.txt  gflags_test.cc  gperf_test.cc  leveldb_test.cc
(+468 files in other folders)
